--- a/src/components/DarkVeil.css
+++ b/src/components/DarkVeil.css
@@ -3,9 +3,12 @@
   inset: 0;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 .darkveil-canvas {
+  position: absolute;
+  inset: 0;
   width: 100%;
   height: 100%;
   display: block;
